# gs-method-template

./: CFG.md  README.md  pyproject.toml
examples/: __init__.py  absgs.py  depth_freq_gs.py
gs_template/: __init__.py  appearance.py  background.py  compression.py  config.py  configs.py  datamanagers.py  densification.py  losses.py  model.py  rendering.py
gs_template/methods/: __init__.py  absgs.py  depth_reg.py  feature_gs.py
