[project]
name = "gs-method-template"
version = "2.0.0"
description = "Gaussian Splatting method template for nerfstudio (extends SplatfactoModel)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

dependencies = [
    "nerfstudio",
    "gsplat>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[project.entry-points."nerfstudio.method_configs"]
gs-template  = "gs_template.configs:gs_template_method"
absgs        = "gs_template.configs:absgs_method"
depth-reg-gs = "gs_template.configs:depth_reg_gs_method"
feature-gs   = "gs_template.configs:feature_gs_method"

[tool.setuptools.packages]
find = { include = ["gs_template", "gs_template.*"] }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
